# pricing-test

./: .gitignore  AUTH_GUIDE.md  GEMINI.md  POLAR_PLAN_LIFECYCLE.md  PRD.md  TASKS.md  TEST_PLAN.md  TRD.md  requirements.txt  vercel.json  실테스트.md
.gemini/: settings.json
api/: index.py  main.py
api/app/: api.py  main.py
api/app/core/: config.py  depends.py
api/app/models/: base.py  entitlement.py  license.py
api/app/modules/dashboard/: router.py
api/app/modules/license/: router.py
api/app/schemas/: dashboard.py
api/app/templates/: test_client.html
backend/: .env.example  README.md  docker-compose.yml  force_reset_db.py  init_db.py  pyproject.toml  seed_plans.py
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: security.py
backend/app/models/: device.py  order.py  plan.py  subscription.py  user.py  webhook.py
backend/app/modules/admin/: router.py
backend/app/modules/auth/: router.py
backend/app/modules/billing/: router.py
backend/app/modules/webhooks/: router.py
backend/app/schemas/: billing.py  license.py  user.py
backend/app/services/: license_service.py  polar_service.py  user_service.py
backend/client_example/: secure_client.py
backend/tests/: conftest.py  test_api.py  test_security.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/lib/: api.ts
